{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 19,
  "lineage": "622d9378-ff75-82e2-b1c2-661c5b169e24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "my-vpc-default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:route-table/rtb-0e249751d919a7a66",
            "default_route_table_id": "rtb-0e249751d919a7a66",
            "id": "rtb-0e249751d919a7a66",
            "owner_id": "458166836490",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-default-route"
            },
            "vpc_id": "vpc-058f9d438e8bfb3b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0defd45de25936219",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-250-57.compute-1.amazonaws.com",
            "public_ip": "3.216.250.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:internet-gateway/igw-02fdf582f0d74d242",
            "id": "igw-02fdf582f0d74d242",
            "owner_id": "458166836490",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-058f9d438e8bfb3b2"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-vpc-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0defd45de25936219",
            "id": "nat-00e4e078cb26a7f68",
            "network_interface_id": "eni-0fc20cd0c068e1c08",
            "private_ip": "10.0.0.199",
            "public_ip": "3.216.250.57",
            "subnet_id": "subnet-00e1a3616c6389148",
            "tags": {
              "Name": "my-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.my-subnet-public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-vpc-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:route-table/rtb-0e702ff46a7386920",
            "id": "rtb-0e702ff46a7386920",
            "owner_id": "458166836490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fdf582f0d74d242",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public-route"
            },
            "vpc_id": "vpc-058f9d438e8bfb3b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-vpc-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b621bf9911d21e62",
            "route_table_id": "rtb-0e702ff46a7386920",
            "subnet_id": "subnet-00e1a3616c6389148"
          },
          "dependencies": [
            "aws_route_table.my-vpc-public-route",
            "aws_subnet.my-subnet-public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:subnet/subnet-00e0a0e9b2d0e5e0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e0a0e9b2d0e5e0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458166836490",
            "tags": {
              "Name": "my-private-subnet-1a"
            },
            "tags_all": {
              "Name": "my-private-subnet-1a"
            },
            "vpc_id": "vpc-058f9d438e8bfb3b2"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.ave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:subnet/subnet-00e1a3616c6389148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00e1a3616c6389148",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458166836490",
            "tags": {
              "Name": "my-subnet-public"
            },
            "tags_all": {
              "Name": "my-subnet-public"
            },
            "vpc_id": "vpc-058f9d438e8bfb3b2"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458166836490:vpc/vpc-058f9d438e8bfb3b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8e3647d52f09c70",
            "default_route_table_id": "rtb-0e249751d919a7a66",
            "default_security_group_id": "sg-0f7ea2560e4c781be",
            "dhcp_options_id": "dopt-79c9ef03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058f9d438e8bfb3b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e249751d919a7a66",
            "owner_id": "458166836490",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}